fixed x overflow

--- a/public/style.css
+++ b/public/style.css
@@ -50,7 +50,7 @@ h2 {
 }
 
 p {
-    margin: 3px 5px 3px 10px;
+    margin: 3px 5px 6px 0;
     font-size: 1em;
     color: var(--color5);
     font-family: var(--text-font);
@@ -129,14 +129,14 @@ input:focus {
 
 #rooms, #chat {
     box-sizing: border-box;
-    padding: 1vw;
     height: 100%;
 }
 
 #rooms {
-    width: 30%; 
-    min-width: 30%;
-    max-width: 30%;
+    padding: 5px 10px;
+    width: 20%; 
+    min-width: 20%;
+    max-width: 20%;
     background-color: var(--color1);
 }
 
@@ -168,12 +168,11 @@ input:focus {
     padding: 5px 10px;
     margin: 0;
     height: 10%;
-
 }
 
 #chat {
     right: 0;
-    width: 70%;
+    width: 80%;
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -206,19 +205,3 @@ input:focus {
     display: flex;
     align-items: center;
 }
-
-/**
-To be implemented possibly
-#submit {
-    width: 37px;
-    height: auto;
-    float: right;
-}   
-
-#message {
-    width: 95%;
-    height: 100%;
-    font-size: 1.3em;
-    color: var(--text-color);
-}
-**/
